# air-paint-project

./: .dockerignore  .gitignore  Dockerfile  README.md  camera.py  cli_args.py  docker-compose.yml  gesture_controller.py  hand_tracker.py  main.py  painter.py  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt
.github/workflows/: ci.yml
airpaint/: camera.py  cli_args.py  gesture_controller.py  hand_tracker.py  logging_utils.py  main.py  painter.py  web_painter.py  web_runtime.py  web_server.py
configs/: gestures.example.json
tests/: test_app_runner.py  test_cli_args.py  test_gesture_controller.py  test_logging_utils.py  test_painter.py  test_web_runtime.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
